<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.romanpuga.tfg.Registro">

    <LinearLayout
        android:id="@+id/form_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/usuario"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/user" />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/name" />

        <RadioGroup
            android:id="@+id/opSex"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_mujer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:checked="true"
                android:text="@string/btn_mujer" />

            <RadioButton
                android:id="@+id/radio_hombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/btn_hombre" />

        </RadioGroup>


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:text="Selecciona tu fecha de nacimiento:" />

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:datePickerMode="spinner" />

        <Button
            android:id="@+id/btn_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:layout_weight="0.03"
            android:text="@string/btn_reg" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
