<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.romanpuga.tfg.MenuPpal">

    <Button
        android:id="@+id/btn_medir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_medir"
        app:layout_constraintBottom_toTopOf="@+id/btn_bluetooth"
        app:layout_constraintLeft_toLeftOf="@+id/btn_bluetooth" />

    <Button
        android:id="@+id/btn_bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_bluetooth"
        app:layout_constraintBottom_toTopOf="@+id/btn_server"
        app:layout_constraintLeft_toLeftOf="@+id/btn_server" />

    <Button
        android:id="@+id/btn_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:layout_marginLeft="60dp"
        android:text="@string/btn_server"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
