<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.romanpuga.tfg.Main">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="178dp"
        android:layout_height="156dp"
        app:srcCompat="@mipmap/ic_launcher_round"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="91dp"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/form_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="331dp"
        tools:ignore="MissingConstraints">

        <AutoCompleteTextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/user_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_registro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/registro" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/login" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
